# IBD-RS-Rating

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: daily_update.yml  init.yml  publish.yml
References/: Claude-IBD의 RS rating 산출 공식.json
data/: tickers.csv
docs/: DECISIONS.md  PRD.md  PROGRESS.md
ibd_rs/: __init__.py  __main__.py  cli.py  config.py  db.py  prices.py  rs.py  splits.py  tickers.py
rs_rating/: __init__.py  client.py
supabase/migrations/: 20260320000000_schema.sql
tests/: test_ci_dependencies.py  test_cli.py  test_client.py  test_db.py  test_prices.py  test_rs.py  test_splits.py
