[project]
name = "ibd-rs-rating"
version = "0.1.0"
description = "IBD-style Relative Strength Rating calculator"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "yfinance>=0.2.30",
    "finviz>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ibd-rs = "ibd_rs.cli:main"

[tool.setuptools.packages.find]
include = ["ibd_rs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
