[project]
name = "ibd-rs-rating"
version = "0.1.0"
description = "Unofficial IBD-style Relative Strength Rating for 4,600+ US stocks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []  # zero dependencies for API client (rs_rating)
keywords = ["stocks", "momentum", "relative-strength", "ibd", "investing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/tjdwls101010/IBD-RS-Rating"
Repository = "https://github.com/tjdwls101010/IBD-RS-Rating"

[project.optional-dependencies]
engine = [
    "pandas>=2.0",
    "yfinance>=0.2.30",
    "finviz>=2.0",
]
pg = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[project.scripts]
ibd-rs = "ibd_rs.cli:main"

[tool.setuptools.packages.find]
include = ["ibd_rs*", "rs_rating*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
